--- a/ngGearSilo/src/app/components/home/home.component.html
+++ b/ngGearSilo/src/app/components/home/home.component.html
@@ -1,1 +1,8 @@
-<p>home works!</p>
+<header class="masthead">
+  <div class="container d-flex h-100 align-items-center">
+    <div class="mx-auto text-center">
+      <h1 class="mx-auto my-0 text-uppercase">Gear Silo</h1>
+      <a [routerLink]="['/home']" class="btn btn-outline-light js-scroll-trigger">Go Home Fix!</a>
+    </div>
+  </div>
+</header>
