--- a/ngGearSilo/src/app/components/register/register.component.html
+++ b/ngGearSilo/src/app/components/register/register.component.html
@@ -6,20 +6,56 @@
     <div class="login-form-main-message"></div>
     <div class="main-login-form">
       <div class="login-group">
+
         <div class="form-group">
-          <label for="username" class="sr-only">Username</label>
-          <input type="text" class="form-control" id="username" name="username" placeholder="username" ngModel>
+          <label for="firstName" class="sr-only">First Name</label>
+          <input type="text" class="form-control" id="firstName" name="firstName" placeholder="first name" ngModel>
         </div>
+
         <div class="form-group">
-          <label for="password" class="sr-only">Password</label>
-          <input type="password" class="form-control" id="password" name="password" placeholder="password" ngModel>
+          <label for="lastName" class="sr-only">Last Name</label>
+          <input type="text" class="form-control" id="lastName" name="lastName" placeholder="last name" ngModel>
         </div>
+
         <div class="form-group">
           <label for="email" class="sr-only">Email</label>
           <input type="email" class="form-control" id="email" name="email" placeholder="email" ngModel>
         </div>
+
+        <div class="form-group">
+          <label for="username" class="sr-only">Username</label>
+          <input type="text" class="form-control" id="username" name="username" placeholder="username" ngModel>
+        </div>
+
+        <div class="form-group">
+          <label for="password" class="sr-only">Password</label>
+          <input type="password" class="form-control" id="password" name="password" placeholder="password" ngModel>
+        </div>
+
+        <div class="form-group">
+          <label for="imageUrl" class="sr-only">Image URL</label>
+          <input type="text" class="form-control" id="imageUrl" name="imageUrl" placeholder="image URL" ngModel>
+        </div>
+
+        <div class="form-group">
+          <label for="phone" class="sr-only">Phone</label>
+          <input type="text" class="form-control" id="phone" name="phone" placeholder="phone" ngModel>
+        </div>
+
+        <div class="form-group">
+          <label for="about" class="sr-only">About</label>
+          <input type="text" class="form-control" id="about" name="about" placeholder="about" ngModel>
+        </div>
+
+        <!--
+        <div class="form-group">
+          <label for="about" class="sr-only">Address</label>
+          <input type="text" class="form-control" id="about" name="about" placeholder="about" ngModel>
+        </div> -->
+
       </div>
       <button type="submit" class="btn btn-success" (click)="register(registerForm)">Register</button>
     </div>
+
   </form>
 </div>
