can get a list of gear with auth, changed security, and gear controller

--- a/ngGearSilo/src/app/components/register/register.component.html
+++ b/ngGearSilo/src/app/components/register/register.component.html
@@ -47,7 +47,7 @@
           <input type="text" class="form-control" id="about" name="about" placeholder="about" ngModel>
         </div>
 
-        <!--
+        <!-- Add Address
         <div class="form-group">
           <label for="about" class="sr-only">Address</label>
           <input type="text" class="form-control" id="about" name="about" placeholder="about" ngModel>
