--- a/ngGearSilo/src/app/components/gear-list/gear-list.component.html
+++ b/ngGearSilo/src/app/components/gear-list/gear-list.component.html
@@ -1,1 +1,40 @@
-<p>gear-list works!</p>
+<div class="contaner-fluid">
+  <div class="row">
+    <div class="col-3"></div>
+    <div class="col-6">
+
+      <div>
+        <br>
+        <div class="text-center">
+          <h2>List of Gear</h2>
+        </div>
+        <table class="table table-primary table-bordered">
+          <thead class="thead-dark">
+            <tr>
+              <th scope="col">Name</th>
+              <!-- <th scope="col">Caffeine (mg)</th>
+              <th scope="col">Calories</th>
+              <th scope="col">Volume (ounces)</th>
+              <th scope="col">Date Consumed</th> -->
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let item of gearList">
+              <td scope="row">{{item.name | titlecase }}</td>
+              <!-- <td>{{item.caffeine}}</td>
+              <td>{{item.calories}}</td>
+              <td>{{item.volume}}</td>
+              <td>{{item.createdAt | date:'shortDate'}}</td> -->
+            </tr>
+          </tbody>
+        </table>
+        <div class="text-center">
+          <p>Click a row for more details.</p>
+        </div>
+      </div>
+
+
+    </div>
+    <div class="col-3"></div>
+  </div>
+</div>
