--- a/ngGearSilo/src/app/components/nav-bar/nav-bar.component.html
+++ b/ngGearSilo/src/app/components/nav-bar/nav-bar.component.html
@@ -1,1 +1,28 @@
-<p>nav-bar works!</p>
+<nav class="navbar navbar-expand-lg navbar-dark bg-secondary sticky">
+  <a class="navbar-brand" href="#">Expense Locker</a>
+  <button
+    class="navbar-toggler sticky"
+    type="button"
+    data-toggle="collapse"
+    data-target="#navbarNavAltMarkup"
+    aria-controls="navbarNavAltMarkup"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link active" [routerLink]="['/home']"
+        >Home <span class="sr-only">(current)</span></a
+      >
+      <!-- <a class="nav-item nav-link" [routerLink]="['/expenses']">Expense List</a> -->
+      <a class="nav-item nav-link showHand" onclick="window.location='#/gears'"
+        >Gear</a
+      >
+
+      <!-- <a class="nav-item nav-link" [routerLink]="['/about']">About</a> -->
+      <a class="nav-item nav-link showHand" onclick="window.location='#/about'">About</a>
+    </div>
+  </div>
+</nav>
