--- a/ngGearSilo/src/app/components/gear-list/gear-list.component.html
+++ b/ngGearSilo/src/app/components/gear-list/gear-list.component.html
@@ -1,30 +1,27 @@
 <div class="contaner-fluid">
   <div class="row">
-    <div class="col-3"></div>
-    <div class="col-6">
-
+    <div class="col-1"></div>
+    <div class="col-10">
       <div>
         <br>
         <div class="text-center">
-          <h2>List of Gear</h2>
+          <h2>Gear List</h2>
         </div>
         <table class="table table-primary table-bordered">
           <thead class="thead-dark">
             <tr>
               <th scope="col">Name</th>
-              <!-- <th scope="col">Caffeine (mg)</th>
-              <th scope="col">Calories</th>
-              <th scope="col">Volume (ounces)</th>
-              <th scope="col">Date Consumed</th> -->
+              <th scope="col">Description</th>
+              <th scope="col">Price</th>
+              <th scope="col">Condition</th>
             </tr>
           </thead>
           <tbody>
             <tr *ngFor="let item of gearList">
               <td scope="row">{{item.name | titlecase }}</td>
-              <!-- <td>{{item.caffeine}}</td>
-              <td>{{item.calories}}</td>
-              <td>{{item.volume}}</td>
-              <td>{{item.createdAt | date:'shortDate'}}</td> -->
+              <td>{{item.description}}</td>
+              <td>{{item.price | currency}}</td>
+              <td>{{item.gearCondition | titlecase }}</td>
             </tr>
           </tbody>
         </table>
@@ -32,9 +29,7 @@
           <p>Click a row for more details.</p>
         </div>
       </div>
-
-
     </div>
-    <div class="col-3"></div>
+    <div class="col-1"></div>
   </div>
 </div>
