stubbed out footer and updated gear list

--- a/ngGearSilo/src/app/components/footer/footer.component.html
+++ b/ngGearSilo/src/app/components/footer/footer.component.html
@@ -1,1 +1,5 @@
-<p>footer needs work , but later!</p>
+<footer class="small text-center text-white-50">
+  <div class="container">
+    <a href="#">Copyright &copy; Almond Teira 2019 </a>
+  </div>
+</footer>
