--- a/ngGearSilo/src/app/components/nav-bar/nav-bar.component.html
+++ b/ngGearSilo/src/app/components/nav-bar/nav-bar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-secondary sticky">
-  <a class="navbar-brand" href="#">Expense Locker</a>
+  <a class="navbar-brand" href="#">GearSilo</a>
   <button
     class="navbar-toggler sticky"
     type="button"
@@ -16,13 +16,13 @@
       <a class="nav-item nav-link active" [routerLink]="['/home']"
         >Home <span class="sr-only">(current)</span></a
       >
-      <!-- <a class="nav-item nav-link" [routerLink]="['/expenses']">Expense List</a> -->
       <a class="nav-item nav-link showHand" onclick="window.location='#/gears'"
         >Gear</a
       >
 
-      <!-- <a class="nav-item nav-link" [routerLink]="['/about']">About</a> -->
       <a class="nav-item nav-link showHand" onclick="window.location='#/about'">About</a>
     </div>
   </div>
 </nav>
+
+
