login cred for profile

--- a/ngGearSilo/src/app/components/profile/profile.component.html
+++ b/ngGearSilo/src/app/components/profile/profile.component.html
@@ -1,4 +1,22 @@
-<p>profile works!</p>
+
+
+
+
+
+
+<div [(ngModel)]="loggedInUser">
+
+<!-- <img src="{{loggedInUser.imageUrl}}" alt=""> -->
+<!-- <p>{{loggedInUser.email}}</p> -->
+
+</div>
+
+
+
+
+
+
+
 
 <div class="contaner-fluid">
   <div class="row">
