cred fix profile

--- a/ngGearSilo/src/app/components/profile/profile.component.html
+++ b/ngGearSilo/src/app/components/profile/profile.component.html
@@ -4,12 +4,12 @@
 
 
 
-<div [(ngModel)]="loggedInUser">
+<!-- <div [(ngModel)]="loggedInUser">
 
-<!-- <img src="{{loggedInUser.imageUrl}}" alt=""> -->
+ <img src="{{loggedInUser.imageUrl}}" alt=""> -->
 <!-- <p>{{loggedInUser.email}}</p> -->
 
-</div>
+<!-- </div> -->
 
 
 
