userts list good

--- a/ngGearSilo/src/app/components/testing/testing.component.html
+++ b/ngGearSilo/src/app/components/testing/testing.component.html
@@ -50,8 +50,7 @@
   </div>
 </div>
 <!--  -->
-
-<!-- Card Iteration Practice below. It works, just need iteration and some card style, etc -->
+<app-admin>Loading Admin...</app-admin> <!-- Card Iteration Practice below. It works, just need iteration and some card style, etc -->
 <!-- <div class="container text-center">
   <div class="row card-group">
     <div class="col-4"  >
