--- a/ngGearSilo/src/app/components/admin/admin.component.html
+++ b/ngGearSilo/src/app/components/admin/admin.component.html
@@ -1,4 +1,4 @@
-<p>admin works!</p>
+<h1 *ngIf="!selectedUser"><span class="badge badge-primary">{{ countUsers() }}</span> GearSilo Users</h1>
 <div id="userList" *ngIf="!selectedUser">
   <table class="table table-striped table-hover">
     <thead class="thead-light">
@@ -7,6 +7,8 @@
         <th>Last Name</th>
         <th>First Name</th>
         <th>Email</th>
+        <th>Role</th>
+        <th>Enabled</th>
       </tr>
     </thead>
     <tbody>
@@ -15,7 +17,10 @@
         <td>{{ user.lastName }}</td>
         <td>{{ user.firstName }}</td>
         <td>{{ user.email }}</td>
+        <td>{{ user.role }}</td>
+        <td>{{ user.enabled }}</td>
       </tr>
     </tbody>
   </table>
 </div>
+<!-- <div><app-gear-list></app-gear-list></div> -->
