updated home page with btns

--- a/ngGearSilo/src/app/components/home/home.component.html
+++ b/ngGearSilo/src/app/components/home/home.component.html
@@ -2,7 +2,13 @@
   <div class="container d-flex h-100 align-items-center">
     <div class="mx-auto text-center">
       <h1 class="mx-auto my-0 text-uppercase">Gear Silo</h1>
-      <a [routerLink]="['/gears']" class="btn btn-outline-light js-scroll-trigger">Gear List</a>
+      <h2 class="mx-auto my-0 text-uppercase">peer-to-peer outdoor gear rentals</h2>
+      <br>
+      <a [routerLink]="['/gears']" class="btn btn-outline-light js-scroll-trigger">See avalible gear to rent</a>
+      <br><br>
+      <a [routerLink]="['/login']" class="btn btn-outline-light js-scroll-trigger">Login</a>
+      <br><br>
+      <a [routerLink]="['/register']" class="btn btn-outline-light js-scroll-trigger">Join our community</a>
     </div>
   </div>
 </header>
