--- a/ngGearSilo/src/app/components/profile/profile.component.html
+++ b/ngGearSilo/src/app/components/profile/profile.component.html
@@ -1,15 +1,20 @@
-<div class="container main-secction">
+<p>{{loggedInUser | json}}</p>
+<p>{{loggedInUser.firstName}}</p>
+
+
+
+
+
+
+<!-- <div class="container main-secction">
   <div class="row">
     <div class="col-md-12 col-sm-12 col-xs-12 image-section">
-      <img
-        src="http://nicesnippets.com/demo/Nature-Night-Sky-Stars-Blurred-Light-Show-Mountains-WallpapersByte-com-1920x1080.jpg">
     </div>
     <div class="row user-left-part">
       <div class="col-md-3 col-sm-3 col-xs-12 user-profil-part pull-left">
         <div class="row ">
           <div class="col-md-12 col-md-12-sm-12 col-xs-12 user-image text-center">
-            <img src="http://nicesnippets.com/demo/1499344631_malecostume.png">
-          </div>
+           </div>
           <div class="col-md-12 col-sm-12 col-xs-12 user-detail-section1 text-center">
             <button class="btn btn-defult follow "><i class="fa fa-user-o" aria-hidden="true"></i> Edit</button>
           </div>
@@ -44,10 +49,9 @@
                 <button class="btn btn-info req-btn"> REQUEST</button>
               </div>
             </div>
-          </div>
+          </div>  -->
 
-
-          <div class="contaner-fluid">
+<!-- <div class="contaner-fluid">
             <div class="row">
               <div class="col-1"></div>
               <div class="col-10">
@@ -86,5 +90,4 @@
       </div>
     </div>
   </div>
-</div>
-<!-- </div> -->
+</div> -->
