fixed user object

--- a/ngGearSilo/src/app/components/profile/profile.component.html
+++ b/ngGearSilo/src/app/components/profile/profile.component.html
@@ -1,12 +1,12 @@
-<p>{{loggedInUser | json}}</p>
-<p>{{loggedInUser.firstName}}</p>
+<!-- <p>{{loggedInUser | json}}</p> -->
+<!-- <p>{{loggedInUser.firstName}}</p> -->
 
 
 
 
 
 
-<!-- <div class="container main-secction">
+<div class="container main-secction">
   <div class="row">
     <div class="col-md-12 col-sm-12 col-xs-12 image-section">
     </div>
@@ -49,9 +49,9 @@
                 <button class="btn btn-info req-btn"> REQUEST</button>
               </div>
             </div>
-          </div>  -->
+          </div>
 
-<!-- <div class="contaner-fluid">
+<div class="contaner-fluid">
             <div class="row">
               <div class="col-1"></div>
               <div class="col-10">
@@ -90,4 +90,4 @@
       </div>
     </div>
   </div>
-</div> -->
+</div>
