--- a/ngGearSilo/src/app/components/profile/profile.component.html
+++ b/ngGearSilo/src/app/components/profile/profile.component.html
@@ -1,28 +1,23 @@
-<!-- <p>{{loggedInUser | json}}</p> -->
-<!-- <p>{{loggedInUser.firstName}}</p> -->
-
-
-
-
-
-
 <div class="container main-secction">
   <div class="row">
     <div class="col-md-12 col-sm-12 col-xs-12 image-section">
+      <img
+        src="http://nicesnippets.com/demo/Nature-Night-Sky-Stars-Blurred-Light-Show-Mountains-WallpapersByte-com-1920x1080.jpg">
     </div>
     <div class="row user-left-part">
       <div class="col-md-3 col-sm-3 col-xs-12 user-profil-part pull-left">
         <div class="row ">
           <div class="col-md-12 col-md-12-sm-12 col-xs-12 user-image text-center">
-           </div>
+            <img src="{{loggedInUser.imageUrl}}">
+          </div>
           <div class="col-md-12 col-sm-12 col-xs-12 user-detail-section1 text-center">
             <button class="btn btn-defult follow "><i class="fa fa-user-o" aria-hidden="true"></i> Edit</button>
           </div>
           <div class="row user-detail-row">
             <div class="col-md-12 col-sm-12 user-detail-section2 pull-left">
               <div class="border"></div>
-              <p>Items Listed</p>
-              <span>3</span>
+              <p>Email</p>
+              <span>{{loggedInUser.email}}</span>
             </div>
             <div class="col-md-12 col-sm-12 user-detail-section2 pull-right">
               <div class="border"></div>
@@ -50,8 +45,7 @@
               </div>
             </div>
           </div>
-
-<div class="contaner-fluid">
+          <div class="contaner-fluid">
             <div class="row">
               <div class="col-1"></div>
               <div class="col-10">
