--- a/ngGearSilo/src/app/components/profile/profile.component.css
+++ b/ngGearSilo/src/app/components/profile/profile.component.css
@@ -22,6 +22,7 @@ body{
 .user-image{
   position: absolute;
   margin-top:-50px;
+  border-radius: 25px;
 }
 .user-left-part{
   margin: 0px;
@@ -29,6 +30,7 @@ body{
 .user-image img{
   width:100px;
   height:100px;
+  border-radius: 50%;
 }
 .user-profil-part{
   padding-bottom:30px;
